[gd_scene load_steps=10 format=2]

[ext_resource path="res://Tornado.tres" type="Material" id=1]
[ext_resource path="res://Light/TornadoLight.png" type="Texture" id=2]
[ext_resource path="res://Scripts/FragonTornado.gd" type="Script" id=3]
[ext_resource path="res://TornadoDirt.tres" type="Material" id=4]
[ext_resource path="res://TornadoTrail.tres" type="Material" id=5]
[ext_resource path="res://tornadoWhoosh.ogg" type="AudioStream" id=6]

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="Shader" id=102]
code = "shader_type canvas_item;
render_mode blend_mul;

uniform float brightness = 0.;
uniform vec3 color = vec3(1.);

void fragment(){
	COLOR = texture(TEXTURE, UV);
	COLOR.rgb = color;
	COLOR.rgb *= COLOR.a * 5.;
	COLOR.rgb *= brightness;
	COLOR.rgb += vec3(1.);
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 102 )
shader_param/brightness = 1.0
shader_param/color = Vector3( 1, 0.2, 1 )

[node name="Tornado" type="Particles2D"]
light_mask = 0
material = SubResource( 4 )
position = Vector2( -4, 62 )
scale = Vector2( 2.2, 2.2 )
amount = 400
lifetime = 3.0
visibility_rect = Rect2( -18.1977, -56.1979, 36.4894, 56.1979 )
process_material = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Dirt" type="Particles2D" parent="."]
amount = 12
lifetime = 1.3
visibility_rect = Rect2( -26.7018, -8.27572, 51.3386, 27.2783 )
local_coords = false
process_material = ExtResource( 4 )

[node name="Light2D" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 0, 5.45454 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
offset = Vector2( 16.6667, -68.1817 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )
collision_layer = 0
collision_mask = 6

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 2, -1, 10, -10, 13, -21, 13, -34, 13, -39, -7, -38, -7, -34, -7, -23, -5, -13 )

[node name="Trail" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 3.63636, -27.2727 )
z_index = -1
amount = 40
visibility_rect = Rect2( -16.7605, -17.4973, 33.8892, 34.6233 )
local_coords = false
process_material = ExtResource( 5 )

[node name="Whoosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
autoplay = true
max_distance = 500.0
bus = "Sounds"
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
